--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go
+name: CI
 
 on:
   push:
@@ -9,8 +9,9 @@ on:
 jobs:
 
   build:
-    name: Build
+    name: Build & Test
     runs-on: ubuntu-latest
+    
     steps:
 
     - name: Set up Go 1.15
